Bug fixes after testing.

--- a/less/main/typography.less
+++ b/less/main/typography.less
@@ -373,9 +373,9 @@ blockquote {
 // ------------------------------
 
 ::-moz-selection {
-    background: @color-text--lightest;
+    background: @color-text--light;
 }
 
 ::selection {
-    background: @color-text--lightest;
+    background: @color-text--light;
 }
