--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -307,7 +307,7 @@
 	
 	.order-total {
          @media @mobile {
-            text-align: center;
+            text-align: right;
         }
 	}
 }
