Changing content variables from camelCase to kebab-case so changing the text elements in the footer works.

--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -1,24 +1,24 @@
 <footer class="template__footer">
 	<div class="footer--container">
-		{{widget('content', 'footerContentTitle', {
+		{{widget('content', 'footer-content-title', {
 			content: '<h2>Stay in contact with us.</h2>'
 		})|raw}}
 		<div class="footer--contact">
 			<div class="footer--contact-left">
-				{{widget('content', 'footerContentContactLeft', {
+				{{widget('content', 'footer-content-contact-left', {
 					content: '<p>Current information tailored to your interests.</p>'
 				})|raw}}
-				{{widget('profile', 'footerProfileContactLeft', {'profileType':'form'})|raw}}
+				{{widget('profile', 'footer-profile-contact-left', {'profileType':'form'})|raw}}
 			</div>
 			<div class="footer--contact-right">
-				{{widget('content', 'footerContentContactRight', {
+				{{widget('content', 'footer-content-contact-left', {
 					content: '<p>Velocity on Social Media</p>'
 				})|raw}}
-				{{widget('profile', 'footerProfileContactRight', {'profileType':'socialicons'})|raw}}
+				{{widget('profile', 'footer-profile-contact-left', {'profileType':'socialicons'})|raw}}
 			</div>
 		</div>
 		<div class="footer--information">
-			{{widget('content', 'footerContentInfo1', {
+			{{widget('content', 'footer-content-info-1', {
 				content: '
 					<h6>Sales guide</h6>
 					<p><a href="#">Configurator</a></p>
@@ -27,7 +27,7 @@
 					<p><a href="#">Rate calculator</a></p>
 				'})
 			|raw}}
-			{{widget('content', 'footerContentInfo2', {
+			{{widget('content', 'footer-content-info-2', {
 				content: '
 					<h6>Online Services</h6>
 					<p><a href="#">Find a dealer</a></p>
@@ -36,14 +36,14 @@
 					<p><a href="#">Find Occasions</a></p>
 				'})
 			|raw}}
-			{{widget('content', 'footerContentInfo3', {
+			{{widget('content', 'footer-content-info-3', {
 				content: '
 					<h6>About us</h6>
 					<p><a href="#">Company</a></p>
 					<p><a href="#">Contact us</a></p>
 				'})
 			|raw}}
-			{{widget('content', 'footerContentInfo4', {
+			{{widget('content', 'footer-content-info-4', {
 				content: '
 					<h6>Press</h6>
 					<p><a href="#">Press information</a></p>
