Added role attribute
Hey Eva i've closed the other pull request as I don't believe this would have fixed your issue. I've added a role attribute to the footer so we can see if when the templates update on your environment it is actually working. If you have any questions feel free to drop me an email.

--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -1,4 +1,4 @@
-<footer class="template__footer">
+<footer class="template__footer" role="footer">
 	<div class="footer--container">
 		{{widget('content', 'footer-content-title', {
 			content: '<h2>Stay in contact with us.</h2>'
