#361 If the contact form text is too long, the form fields become too wide

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -265,6 +265,7 @@ input:focus {
 				display: block;
 				margin-left: 1em * 2.5;
 				.transform-scale(1);
+				word-break: break-word;
 				
 				&:before,
 				&:after {
