#367 Adding a word break to the radio buttons and checkboxes and large text.

--- a/less/main/typography.less
+++ b/less/main/typography.less
@@ -333,6 +333,7 @@ blockquote {
 	font-size: @font__h3--font-size;
 	font-weight: @font__h3--font-weight;
 	color: @color__h3--text;
+	word-break: break-word;
 	
 	.make-font-a-little-smaller(@font__h3--font-size);
 	.make-font-smaller(@font__h3--font-size);
