#246 All of the store dropdowns are not styled.

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -272,7 +272,7 @@ input:focus {
 					content: " ";
 					cursor: pointer;
 					position: absolute;
-					top: 50%;
+					top: 0.75em;
 				}
 
 				&:before {
